--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -3068,6 +3068,7 @@ grpc_cc_library(
     external_deps = [
         "absl/status",
         "absl/status:statusor",
+        "absl/strings",
         "libcrypto",
         "libssl",
     ],
